# rehearse

./: .claudeignore  .env.example  .gitignore  .realtalk.json  CHANGELOG.md  DESIGN.md  README.md  SPEC.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml
docs/design/: v0.2-design.md  v1.2-design.md  v1.3-migration-guide.md
docs/prd/: 0.1.md
docs/skills/: layer-0-session-data-types.md  layer-2-config.md  layer-4-conversation.md
docs/spec/: v0.1.md  v0.2.md  v1.1.md  v1.2.md  v1.3.md  v1.4.md  v1.5.md  v1.6.md  v2.0.md
docs/specs/: MANIFEST.md  v2026-04-27-eval-harness.md  v2026-04-27-runtime.md  v2026-04-28-drop-pipecat.md  v2026-04-28-hume-evi-bridge.md  v2026-04-28-mme-emotion-and-audio-targets.md  v2026-04-28-runtime-workstream.md  v2026-04-29-mme-seeded-rl-sandbox-eval.md
evals/benchmarks/eq-bench/sample/: questions.json
evals/datasets/mme-emotion/v0-10clip/: manifest.json
evals/datasets/mme-emotion/v0-rollout-seeds/: manifest.json
evals/fixtures/founder-recorded/: README.md  manifest.json
realtalk/: __init__.py  api.py  api_server.py  cli.py  compact.py  config.py  conversation.py  game_tools.py  hooks.py  permissions.py  prompt.py  session.py  storage.py  tools.py
realtalk/tui/: app.py  screens.py  widgets.py
rehearse/: __init__.py  app.py  bus.py  config.py  frames.py  intake.py  personas.py  phases.py  pipeline.py  session.py  storage.py  synthesis.py  telephony.py  types.py  viewer.py
rehearse/agents/: __init__.py  clm.py
rehearse/audio/: __init__.py  mulaw.py  resample.py  twilio_stream.py
rehearse/eval/: README.md  __init__.py  cli.py  harness.py  judge.py  prosody_scripts.py  protocols.py  runner.py  sandbox_agents.py  sandbox_connection.py  sandboxes.py  scorers.py  synthetic_user.py  transports.py  tts_bridge.py  worker.py
rehearse/eval/benchmarks/: __init__.py  eq_bench.py  mme_emotion.py  noop.py
rehearse/eval/datasets/: __init__.py  coach_dialogue_smoke.py  mme_emotion.py  mme_rollout_seeds.py  noop.py  voice_agent_smoke.py
rehearse/eval/environments/: __init__.py  multimodal_llm.py  voice_agent_sandbox.py
rehearse/eval/evals/: __init__.py  coach_dialogue_smoke.py  mme_emotion.py  mme_sandbox_rollout.py  noop.py  voice_agent_smoke.py
rehearse/eval/executors/: __init__.py  in_process.py  local_subprocess.py
rehearse/eval/providers/: __init__.py  base.py  gemini.py  vllm.py
rehearse/eval/scorers/: __init__.py  deterministic.py  llm_judge.py
rehearse/eval/targets/: __init__.py  echo.py  raw_llm.py
rehearse/services/: __init__.py  hume_evi.py
rehearse/writers/: __init__.py  artifacts.py
scripts/: diagnose_number.py
setup/: fetch_mme_emotion.py
tests/: test_api_integration.py  test_api_litellm.py  test_audio_codecs.py  test_bus.py  test_clm.py  test_compact.py  test_config.py  test_conversation.py  test_hooks.py  test_hume_evi.py  test_intake.py  test_personas.py  test_phases.py  test_prompt.py  test_session_events.py  test_session_exports.py  test_session_ids.py  test_session_properties.py  test_session_replay.py  test_session_serialization.py  test_session_storage.py  test_synthesis.py  test_telephony_r1.py  test_tools.py  test_tui.py  test_twilio_stream.py  test_types.py  test_writers.py
tests/eval/: test_coach_dialogue_smoke.py  test_eq_bench_adapter.py  test_local_subprocess.py  test_mme_emotion_eval.py  test_mme_sandbox_rollout.py  test_protocols.py  test_runner.py  test_sandboxes.py  test_scorers.py  test_voice_agent_sandbox_environment.py
web/: INTERFACE.md  Makefile  viewer.html
web/infra/: .gitignore  artifact_registry.tf  cloud_run.tf  domain.tf  firestore.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
web/scripts/: deploy.sh
web/server/: .dockerignore  .gcloudignore  Dockerfile.api  Dockerfile.ws  pyproject.toml
web/server/realtalk_web/: __init__.py  api_main.py  auth.py  capacity.py  protocol.py  session.py  ws_main.py
web/server/tests/: test_api_main.py  test_auth.py  test_capacity.py  test_protocol.py  test_session.py  test_ws_main.py
web/server/tests_integration/: test_deployed.py
