[project]
name = "rehearse"
version = "0.1.0"
description = "Voice agent inference engine for real-time conversation coaching. Prototype ML system for continual learning from live sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.39",
    "hume>=0.13",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "twilio>=9.0",
    "python-multipart>=0.0.9",
    "google-genai>=0.3",
]

[project.scripts]
rehearse-eval = "rehearse.eval.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not live_api'"
markers = [
    "live_api: hits real provider APIs; requires sourced .env. Deselected by default. Run with `pytest -m live_api`.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
